syntax = "proto3";

package proto;
option go_package = ".;proto";
//option swift_prefix

service Hellow {

  rpc SaySomething(HelloReq) returns (HelloRes);
}

message HelloReq {
  string name = 1;
}

message HelloRes {
  string message = 1;
}